增加前端vue框架和导航页